[package]
name = "jakarta"
version = "0.1.0"
edition = "2021"
authors = ["Thomas Kosiewski <thoma471@googlemail.com>"]
description = "An extendible command interpolator engine"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.57"
derive_builder = "0.11.2"
regex = "1.6.0"
thiserror = "1.0.37"
tracing = "0.1.36"
tokio = { version = "1.21.2", default-features = false, features = ["sync"] }

[dev-dependencies]
tokio = { version = "1.21.2", features = ["full"] }
