[package]
name = "jakarta-env"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.57"
jakarta = { path = "../jakarta" }
tokio = { version = "1.21.2", default-features = false, features = ["sync"] }
tracing = "0.1.36"

[dev-dependencies]
tokio = { version = "1.21.2", features = ["full"] }
